--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+    <script src="jquery-3.5.1.js"></script>
+
+    <title>Kijun Kim</title>
+    <!-- <link rel="icon" href="fabicon.ico"> -->
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Scripts -->
+    <script src="script.js"></script>
+
+</head>
+<body>
+    <header>
+        <h1>
+			Kijun Kim
+		</h1>
+    </header>
+    <section>
+    </section>
+    <footer>
+    </footer>
+</body>
+</html>
